--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
 			var game = new Game(512, 512, 1000 / 60 /* 60 fps */),
 				rect = game.rect.shrink(20),
 				field = new Field('field', game),
-				level1 = new Level('test');
+				level1 = new Level('test'),
+				behavior1 = new Behavior().Pieter(10),
+				behavior2 = new Behavior().Pieter(30);
 
-			level1.add(new Entity(rect.randomPoint(), 0, Behavior.Pieter));
-			level1.add(new Entity(rect.randomPoint(), 1, Behavior.Pieter));
+			level1.add(new Entity(rect.randomPoint(), 0, behavior1));
+			level1.add(new Entity(rect.randomPoint(), 1, behavior2));
 			game.addLevel(level1);
 
 			var groupOne = level1.points(0);
