updated pause and play icon (Open Iconic)

--- a/index.html
+++ b/index.html
@@ -12,29 +12,25 @@
 	<link rel="stylesheet" type="text/css" href="visuals.css">
 </head>
 <body>
+	<!-- Icons from Open Iconic: see /ICON-LICENSE -->
 	<svg version="1.1" xmlns="http://www.w3.org/2000/svg" style="display:none">
 		<defs>
-			<symbol id="resume-icon" viewBox="0 0 8 8">
-				<path style="fill:#000000;fill-opacity:0.89803922;stroke:none;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0.89940828" d="M 1.0044644,8.1657759 0.96357132,1.1358145 7.0721431,4.6153808 Z"></path>
+			<symbol id="media-play" viewBox="0 0 8 8">
+				<path d="M0 0v6l6-3-6-3z" transform="translate(1 1)"></path>
 			</symbol>
 			<symbol id="chevron-left" viewBox="0 0 8 8">
 				<path d="M4 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z" transform="translate(1)"></path>
 			</symbol>
-			<symbol id="pause-icon" viewBox="0 0 8 8">
-				<path
-			       style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.81599164px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-			       d="M 2.6828861,0.78684804 C 2.8081871,7.5536273 2.8081871,7.5536273 2.8081871,7.5536273"/>
-   			 	<path
-			       style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.81599164px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-			       d="M 5.3837787,0.71988376 C 5.5090797,7.486663 5.5090797,7.486663 5.5090797,7.486663"/>
+			<symbol id="media-pause" viewBox="0 0 8 8">
+				<path d="M0 0v6h2v-6h-2zm4 0v6h2v-6h-2z" transform="translate(1 1)"></path>
 			</symbol>
 		</defs>
 	</svg>
 
 	<header id="topbar">
 		<button class="icon" id="btn-back">chevron-left</button>
-		<button class="icon" id="btn-pause"><i>pause-icon</i></button>
-		<button class="icon" id="btn-resume"><i>resume-icon</i></button>
+		<button class="icon" id="btn-pause">media-pause</button>
+		<button class="icon" id="btn-resume">media-play</button>
 	</header>
 	<div id="game" class="page">
 		<h1>Level 1</h1>
