--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
 			<symbol id="media-pause" viewBox="0 0 8 8">
 				<path d="M0 0v6h2v-6h-2zm4 0v6h2v-6h-2z" transform="translate(1 1)"></path>
 			</symbol>
+			<symbol id="reload" viewBox="0 0 8 8">
+				<path d="M4 0c-2.201 0-4 1.799-4 4s1.799 4 4 4c1.104 0 2.092-.456 2.813-1.188l-.688-.688c-.54.548-1.289.875-2.125.875-1.659 0-3-1.341-3-3s1.341-3 3-3c.834 0 1.545.354 2.094.906l-1.094 1.094h3v-3l-1.188 1.188c-.731-.72-1.719-1.188-2.813-1.188z"></path>
+			</symbol>
 		</defs>
 	</svg>
 
 	<header id="topbar">
 		<button class="icon" id="btn-back">chevron-left</button>
+		<button class="icon" id="btn-restart">reload</button>
 		<button class="icon" id="btn-pause">media-pause</button>
 		<button class="icon" id="btn-resume">media-play</button>
 	</header>
