improved interface (added pause screen)

--- a/index.html
+++ b/index.html
@@ -36,9 +36,15 @@
 
 	<header id="topbar">
 		<button class="icon" id="btn-back">chevron-left</button>
-		<button class="icon" id="btn-restart">reload</button>
-		<button class="icon" id="btn-pause">media-pause</button>
-		<button class="icon" id="btn-resume">media-play</button>
+	</header>
+	<header id="gamebar">
+		<span class="group1">
+			<button class="icon" id="btn-menu">chevron-left</button>
+		</span>
+		<span class="group2">
+			<button class="icon" id="btn-restart">reload</button>
+			<button class="icon" id="btn-pause">media-pause</button>
+		</span>
 	</header>
 	<div id="game" class="page">
 		<h1 id="levelheader">Level 1</h1>
@@ -61,6 +67,10 @@
 	</nav>
 	<div id="loader" class="page">
 		<h1>Loading...</h1>
+	</div>
+	<div id="pause-screen" class="page">
+		<h1>- Paused -</h1>
+		<p>Press here to resume</p>
 	</div>
 	<script src="interface.js"></script>
 	<script>
