--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
-	<title>Test</title>
+	<title>We need a name!</title>
 	<script src="jquery-2.1.4.min.js"></script>
+	<script src="jquery.scrollTo.min.js"></script>
+	<script src="jquery.waypoints.min.js"></script>
 	<script src="d3.min.js" charset="utf-8"></script>
 	<script src="geometry.js"></script>
 	<script src="behavior.js"></script>
@@ -59,12 +61,20 @@
 	<div id="options" class="page">
 		<h1>Options</h1>
 	</div>
-	<nav id="about" class="page">
-		<a id="btn-algorithms">Algorithms</a>
-		<a id="btn-duality">Duality</a>
-		<a id="btn-info">Info</a>
-		<a id="btn-credits">Credits</a>
-	</nav>
+	<div id="about" class="page">
+		<nav id="about-tabs">
+			<a id="btn-about-algorithms" class="selected">Algorithms</a>
+			<a id="btn-about-duality">Duality</a>
+			<a id="btn-about-info">Info</a>
+			<a id="btn-about-credits">Credits</a>
+		</nav>
+		<article>
+			<section id="about-algorithms"></section>
+			<section id="about-duality"></section>
+			<section id="about-info"></section>
+			<section id="about-credits"></section>
+		</article>
+	</div>
 	<div id="loader" class="page">
 		<h1>Loading...</h1>
 	</div>
@@ -73,11 +83,10 @@
 		<p>Press here to resume</p>
 	</div>
 	<script src="interface.js"></script>
+	<script src="about.js"></script>
 	<script>
 		$(function()
 		{
-			$('#btn-play').click(); // Debug
-
 			var game = new Game(640, 360, 1000 / 60 /* 60 fps */),
 				field = new Field('field', game);
 
@@ -87,6 +96,11 @@
 			InitializeLevels(game.rect.shrink(20));
 			game.on('update', field.updateLevel.bind(field));
 			game.start(1);
+
+			$(function() // Debug
+			{
+				$('#btn-play').click();
+			})
 		});
 	</script>
 </body>
