Refactored about demo

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 			<button id="btn-win-menu">Levels</button>
 		</p>
 	</div>
+	<script src="aboutdemo.js"></script>
 	<script src="about.js"></script>
 	<script>
 		$(function()
