--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src="leveldesign.js"></script>
 	<link rel="stylesheet" type="text/css" href="interface.css">
 	<link rel="stylesheet" type="text/css" href="visuals.css">
+	<link rel="stylesheet" type="text/css" href="aboutvisuals.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
