Game score (step 1)

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	<header id="gamebar">
 		<span class="group1">
 			<button class="icon" id="btn-menu">chevron-left</button>
+			<span id="game-score">0</span>
 		</span>
 		<span class="group2">
 			<button class="icon" id="btn-restart">reload</button>
