--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script src="d3.min.js" charset="utf-8"></script>
 	<script src="geometry.js"></script>
 	<script src="behavior.js"></script>
+	<script src="behavior2.js"></script>
 	<script src="ai.js"></script>
 	<script src="game.js"></script>
 	<script src="visuals.js"></script>
