--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
 		<h1>- Paused -</h1>
 		<p>Press here to resume</p>
 	</div>
+	<div id="lose-screen" class="page">
+		<h1>- Game over -</h1>
+		<p>Press here to try again</p>
+	</div>
 	<div id="win-screen" class="page">
 		<h1>Congratulations!</h1>
 		<p>
@@ -126,6 +130,10 @@
 			{
 				$('#win-screen').show();
 				localStorage.game = JSON.stringify(game.data);
+			});
+			game.on('lose', function()
+			{
+				$('#lose-screen').show();
 			});
 
 			if (localStorage.game)
