--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
 	<div id="win-screen" class="page">
 		<h1>Congratulations!</h1>
 		<p>
-			But there are more levels..
+			<span class="label">Score:</span>
+			<span id="win-score">0</span>
 		</p>
 		<p>
 			<button id="btn-win-restart">Replay</button>
@@ -128,7 +129,7 @@
 			game.on('update', field.updateLevel.bind(field));
 			game.on('win', function()
 			{
-				$('#win-screen').show();
+				$('#win-screen').show().trigger('score');
 				localStorage.game = JSON.stringify(game.data);
 			});
 			game.on('lose', function()
