various visual improvements

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>We need a name!</title>
+	<title>Duality Force</title>
 	<script src="jquery-2.1.4.min.js"></script>
 	<script src="jquery.scrollTo.min.js"></script>
 	<script src="jquery.waypoints.min.js"></script>
@@ -61,6 +61,7 @@
 		<svg id="field"></svg>
 	</div>
 	<nav id="menu" class="page">
+		<h1 id="game-title">&nbsp;</h1>
 		<a id="btn-play">Play</a>
 		<a id="btn-options">Options</a>
 		<a id="btn-about">About</a>
@@ -91,6 +92,10 @@
 	</div>
 	<div id="loader" class="page">
 		<h1>Loading...</h1>
+	</div>
+	<div id="orient-guard" class="page">
+		<h1>&nsbp;</h1>
+		<h2>Please reorient your device.</h2>
 	</div>
 	<div id="pause-screen" class="page">
 		<h1>- Paused -</h1>
