--- a/index.html
+++ b/index.html
@@ -58,7 +58,28 @@
 	<div id="game" class="page">
 		<h1 id="levelheader">&nbsp;</h1>
 		<h2 id="leveltext">&nbsp;</h2>
-		<svg id="field"></svg>
+		<svg id="field">
+			<defs>
+				<pattern id="frigate-blue" width="40" height="40">
+					<image xlink:href="images/frigate_blue.svg" width="40" height="40"></image>
+				</pattern>
+				<pattern id="frigate-red" width="40" height="40">
+					<image xlink:href="images/frigate_red.svg" width="40" height="40"></image>
+				</pattern>
+				<pattern id="cruiser-blue" width="20" height="20">
+					<image xlink:href="images/cruiser_blue.svg" width="20" height="20"></image>
+				</pattern>
+				<pattern id="cruiser-red" width="20" height="20">
+					<image xlink:href="images/cruiser_red.svg" width="20" height="20"></image>
+				</pattern>
+				<pattern id="fighter-blue" width="10" height="10">
+					<image xlink:href="images/fighter_blue.svg" width="10" height="10"></image>
+				</pattern>
+				<pattern id="fighter-red" width="10" height="10">
+					<image xlink:href="images/fighter_red.svg" width="10" height="10"></image>
+				</pattern>
+			</defs>
+		</svg>
 	</div>
 	<nav id="menu" class="page">
 		<h1 id="game-title">&nbsp;</h1>
