Added ship rotations and thruster and collision effects

--- a/index.html
+++ b/index.html
@@ -60,23 +60,41 @@
 		<h2 id="leveltext">&nbsp;</h2>
 		<svg id="field">
 			<defs>
-				<pattern id="frigate-blue" width="40" height="40">
+				<pattern id="frigate-blue" width="1" height="1">
 					<image xlink:href="images/frigate_blue.svg" width="40" height="40"></image>
 				</pattern>
-				<pattern id="frigate-red" width="40" height="40">
+				<pattern id="frigate-blue-thrust" width="1" height="1">
+					<image xlink:href="images/frigate_blue_thrust.svg" width="40" height="40"></image>
+				</pattern>
+				<pattern id="frigate-red" width="1" height="1">
 					<image xlink:href="images/frigate_red.svg" width="40" height="40"></image>
 				</pattern>
-				<pattern id="cruiser-blue" width="20" height="20">
+				<pattern id="frigate-red-thrust" width="1" height="1">
+					<image xlink:href="images/frigate_red_thrust.svg" width="40" height="40"></image>
+				</pattern>
+				<pattern id="cruiser-blue" width="1" height="1">
 					<image xlink:href="images/cruiser_blue.svg" width="20" height="20"></image>
 				</pattern>
-				<pattern id="cruiser-red" width="20" height="20">
+				<pattern id="cruiser-blue-thrust" width="1" height="1">
+					<image xlink:href="images/cruiser_blue_thrust.svg" width="20" height="20"></image>
+				</pattern>
+				<pattern id="cruiser-red" width="1" height="1">
 					<image xlink:href="images/cruiser_red.svg" width="20" height="20"></image>
 				</pattern>
-				<pattern id="fighter-blue" width="10" height="10">
-					<image xlink:href="images/fighter_blue.svg" width="10" height="10"></image>
+				<pattern id="cruiser-red-thrust" width="1" height="1">
+					<image xlink:href="images/cruiser_red_thrust.svg" width="20" height="20"></image>
 				</pattern>
-				<pattern id="fighter-red" width="10" height="10">
-					<image xlink:href="images/fighter_red.svg" width="10" height="10"></image>
+				<pattern id="fighter-blue" width="1" height="1">
+					<image xlink:href="images/fighter_blue.svg" width="20" height="20"></image>
+				</pattern>
+				<pattern id="fighter-blue-thrust" width="1" height="1">
+					<image xlink:href="images/fighter_blue_thrust.svg" width="20" height="20"></image>
+				</pattern>
+				<pattern id="fighter-red" width="1" height="1">
+					<image xlink:href="images/fighter_red.svg" width="20" height="20"></image>
+				</pattern>
+				<pattern id="fighter-red-thrust" width="1" height="1">
+					<image xlink:href="images/fighter_red_thrust.svg" width="20" height="20"></image>
 				</pattern>
 			</defs>
 		</svg>
