added hazard lines in goal zone

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 				<pattern id="fighter-red-thrust" width="1" height="1">
 					<image xlink:href="images/fighter_red_thrust.svg" width="20" height="20"></image>
 				</pattern>
+				<pattern id="hazardlines" width="40" height="40" patternUnits="userSpaceOnUse">
+					<image xlink:href="images/hazardlines.svg" width="40" height="40"></image>
+				</pattern>
 			</defs>
 		</svg>
 	</div>
