fix: musicplayer undefined

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
 				.attr('r', function (d) { return Math.random() * 2; })
 			;
 
+			window.musicplayer = undefined;
 			if (localStorage.music != 'off')
 				StartMusic();
 
